# openddil-tactical-agents

./: .cursorrules  .gitignore  AGENTS.md  README.md  config.py  config.yaml  faust_agents.py  llms.txt  pyproject.toml  restate_agents.py
.github/workflows/: docker-build.yml  notify-bundle-rebuild.yml
edge/: Dockerfile  edge_faust_detector.py  edge_restate_detector.py  faust_edge.py  rules.yaml
edge/detection/: algorithms.py  units.py  windows.py
edge/faust/: Dockerfile
edge/prognostics/: __init__.py  accumulators.py  agent.py  coefficients.py  models.py
edge/prognostics/tests/: test_accumulators.py  test_models.py
edge/restate/: Dockerfile
edge/tests/: smoke_test.py
hub/: hub_restate_projector.py  restate_hub.py
hub/projector/: Dockerfile
regional/: Dockerfile  README.md  aggregator_app.py  asset_registry_cache.py  faust_regional.py  severity.py  source_app.py
regional/tests/: test_asset_registry_cache.py
