[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openddil-tactical-agents"
version = "0.1.0"
description = "OpenDDIL Tactical Agents"
requires-python = ">=3.11"
dependencies = [
    "faust-streaming>=0.10.0",
    "restate-sdk>=0.9.0",
    "asyncpg>=0.28.0",
    "confluent-kafka[protobuf]>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "protobuf>=4.21.0"
]
